--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ VITE_API_URL = http://localhost:3001
 
 
 # Test WiFi
-# VITE_API_URL = http://localhost:3001
+# VITE_API_URL = http://172.30.94.83:3001
