--- a/package.json
+++ b/package.json
@@ -14,11 +14,21 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.4",
+    "@tanstack/react-query": "^5.36.0",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.1.9",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.51.4",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
