--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -20,6 +21,7 @@
     "dayjs": "^1.11.11",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.9",
+    "gh-pages": "^6.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
