--- a/.env
+++ b/.env
@@ -3,7 +3,12 @@
 
 
 # Develop
-VITE_API_URL = http://localhost:3001
+# VITE_API_URL = http://localhost:3001
+
+
+
+# Develop
+VITE_API_URL = http://192.168.10.111:3001
 
 
 # Test WiFi
