--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 
 # Develop
-VITE_API_URL = http://localhost:3001
+# VITE_API_URL = http://localhost:3001
 
 
 
@@ -13,3 +13,8 @@ VITE_API_URL = http://localhost:3001
 
 # Test WiFi
 # VITE_API_URL = http://172.30.94.83:3001
+
+
+#Production
+
+    VITE_API_URL = http://140.99.97.148:3001
